--- a/JS Applications-exams/Meme Lounge/index.html
+++ b/JS Applications-exams/Meme Lounge/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <title>Meme Lounge</title>
     <link rel="stylesheet" href="/style/styles.css" />
-    <script src='./src/app.js' type="module"></script>
+    <script src="./src/app.js" type="module"></script>
   </head>
 
   <body>
@@ -18,23 +18,23 @@
 
       <!-- Navigation -->
       <nav>
-        <a href="#">All Memes</a>
+        <a href="/memes">All Memes</a>
         <!-- Logged users -->
         <div class="user">
-          <a href="#">Create Meme</a>
+          <a href="/create">Create Meme</a>
           <div class="profile">
             <span>Welcome, {email}</span>
-            <a href="#">My Profile</a>
-            <a href="#">Logout</a>
+            <a href="/profile">My Profile</a>
+            <a id="logoutBtn" href="javascript:void(0)">Logout</a>
           </div>
         </div>
         <!-- Guest users -->
         <div class="guest">
           <div class="profile">
-            <a href="#">Login</a>
-            <a href="#">Register</a>
+            <a href="/login">Login</a>
+            <a href="/register">Register</a>
           </div>
-          <a class="active" href="#">Home Page</a>
+          <a class="active" href="/">Home Page</a>
         </div>
       </nav>
 
