--- a/ANGULAR/Angular Components/Workshop/forum/src/index.html
+++ b/ANGULAR/Angular Components/Workshop/forum/src/index.html
@@ -2,8 +2,10 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <title>SoftUni Forum</title>
+    <base href="/" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./styles.scss" />
     <link
       href="https://fonts.googleapis.com/css?family=Parisienne&display=swap"
       rel="stylesheet"
@@ -16,8 +18,8 @@
       src="https://kit.fontawesome.com/3cd69e2433.js"
       crossorigin="anonymous"
     ></script>
-    <title>SoftUni Forum</title>
   </head>
+
   <body>
     <app-root></app-root>
   </body>
